Semana dos commit del proyecto Tienda

--- a/src/main/resources/static/ejemplo8.html
+++ b/src/main/resources/static/ejemplo8.html
@@ -7,9 +7,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="index.html"><h1>TechShop</h1></a>
+                <a href="ejemplo7.html">&triangleleft;</a>
+                <a href="ejemplo9.html">&triangleright;</a>
+                <br/>
+            </nav>
+            <hr>
+        </header>
         <div>
             <h1 style="text-align: center">Ejemplo 8</h1>
             <h2>Imagenes</h2>
@@ -20,7 +29,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <a href="ejemplo9.html">Siguiente</a>
         <br/>
         <img src="img/SIOctava.jpeg" alt=" Imagen de Civic SI" width="300"/>
+        <br>
         <img src="img/honda-civic-type-r-mugen.jpg" alt="Imagen de Civic SI" width="300"/>
-
+        <br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Chevrolet_Captiva_LTZ_2.2_D_4WD_%28Facelift%29_%E2%80%93_Frontansicht%2C_18._M%C3%A4rz_2012%2C_Wuppertal.jpg/1200px-Chevrolet_Captiva_LTZ_2.2_D_4WD_%28Facelift%29_%E2%80%93_Frontansicht%2C_18._M%C3%A4rz_2012%2C_Wuppertal.jpg" alt="Imagen de Civic SI" width="300"/>
     </body>
 </html>
