--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,27 +1,98 @@
 <!DOCTYPE html>
 <!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+Autor: Sebastian Araya Gomez
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>TechShop</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
+
     </head>
     <body>
-        <div>
-            <h1 style="text-align: center">Home</h1>
-            <h2>Pagina Principal</h2>
-            <hr/>
-        </div>
-        <div style="text-align: center">
-            <p>Esto es un parrafo de la pagina</p>
-            <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-            <p>"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"</p>
-        </div>
-        <br>
-        <br>
-        <p>Ultima linea</p>
+        <header>
+            <nav>
+                <a href="index.html"><h1>TechShop</h1></a>
+                <a href="ejemplo9.html">&triangleleft;</a>
+                <a href="ejemplo2.html">&triangleright;</a>
+                <br/>
+            </nav>
+            <hr>
+        </header>
+        <aside>
+            <h2>Top Ventas</h2>
+            <h3>El producto más vendido </h3>
+            <p>Según los datos del mes pasado el producto x100 fue el que registró más ventas</p>
+        </aside>
+        <section>
+            <h2>Nuestros productos</h2>
+            <article>
+                <hr/>
+                <h2>x2126</h2>
+                <figure>
+                    <img src="https://ss628.liverpool.com.mx/xl/1141964077.jpg" height="150" alt=""/> 
+                    <figcaption>Servidor de alto perfil <a href="#">Comprar</a></figcaption>
+                </figure>
+                <br>
+                <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                <br>
+            </article>
+            <article>
+                <hr/>
+                <h2>x206</h2>
+                <figure>
+                    <img src="https://www.cqnetcr.com/77305-home_default/torre-hpe-proliant-ml110-gen10-xeon-16gb-hdd-4tb.jpg" height="150" alt=""/> 
+                    <figcaption>Servidor de gama media <a href="#">Comprar</a></figcaption>
+                </figure>
+                <br>
+                <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                <br>
+            </article>
+            <article>
+                <hr/>
+                <h2>Vivo X</h2>
+                <figure>
+                    <img src="https://i5.walmartimages.com/seo/Verizon-Samsung-A54_1b8a335b-8b00-4317-8ebd-0d08504127ce.9337bd5e394ec5734ae7545452b2cb05.jpeg?odnHeight=768&odnWidth=768&odnBg=FFFFFF" height="150" alt=""/> 
+                    <figcaption>Telefono Inteligente <a href="#">Comprar</a></figcaption>
+                </figure>
+                <br>
+                <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                <br>
+            </article>
+            <article>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Codigo</th>
+                            <th>Descripcion</th>
+                            <th>Precio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>X206</td>
+                            <td>Servidor de gama media</td>
+                            <td>$300</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>X216</td>
+                            <td>Servidor de gama alta</td>
+                            <td>$500</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>X226</td>
+                            <td>Servidor de gama baja</td>
+                            <td>$200</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <hr>
+        </section>
+        <footer>Derechos Reservados &COPY;2024</footer>
     </body>
 </html>
