--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -7,9 +7,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="index.html"><h1>TechShop</h1></a>
+                <a href="ejemplo4.html">&triangleleft;</a>
+                <a href="ejemplo6.html">&triangleright;</a>
+                <br/>
+            </nav>
+            <hr>
+        </header>
         <div>
             <h1 style="text-align: center">Ejemplo 4</h1>
             <h2>Encabezados</h2>
