--- a/src/main/resources/static/ejemplo9.html
+++ b/src/main/resources/static/ejemplo9.html
@@ -7,9 +7,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="index.html"><h1>TechShop</h1></a>
+                <a href="ejemplo8.html">&triangleleft;</a>
+                <a href="index.html">&triangleright;</a>
+                <br/>
+            </nav>
+            <hr>
+        </header>
         <div>
             <h1 style="text-align: center">Ejemplo 8</h1>
             <h2>Imagenes</h2>
@@ -18,12 +27,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <a href="ejemplo8.html">Atras</a>
         <a href="index.html">Home</a>
         <a href="ejemplo2.html">Siguiente</a>
+        <br/>
         <form action="#" method="post">
             <label>Nombre</label> 
             <Input placeholder="nombre" type="text" name="nombre" value=" " size="20"/>
             <br/>
             <label>Apellidos</label> 
             <Input placeholder="apellido" type="text" name="apellido" value=" " size="20"/>
+            <br/>
+            <label>Correo Electrónico</label> 
+            <Input placeholder="correo" type="email" name="correo" value=" " size="20"/>
             <br/>
             <input type="submit" value="registrarse"/>
         </form>
